added: Bonus section

--- a/main.scss
+++ b/main.scss
@@ -20,10 +20,51 @@ $orange: #f95f09;
 $shopping: #ffc1b3;
 $rare: #da57f8;
 
+.color__main {
+  background-color: $main;
+}
+.color__pink {
+  background-color: $pink;
+}
+.color__yellow {
+  background-color: $yellow;
+}
+
+.color__darker {
+  background-color: $darker;
+}
+.color__success {
+  background-color: $success;
+}
+.color__primary {
+  background-color: $primary;
+}
+
+.color__danger {
+  background-color: $danger;
+}
+
+.color__orange {
+  background-color: $orange;
+}
+
+.color__shopping {
+  background-color: $shopping;
+}
+
+.color__rare {
+  background-color: $rare;
+}
+
+// WEBSITE COLORS ENDED
+
+// WEBSITE HEADER START
 .web__header {
   background-color: $main;
   padding: 1rem 0rem;
   color: $white;
+
+  margin-bottom: 3rem;
   .header_wrapper {
     display: flex;
     justify-content: space-between;
@@ -65,6 +106,41 @@ $rare: #da57f8;
   }
 }
 
+// WEBSITE HEADER ENDED
+
+//  BONUS SECTION START
+
+.bonus__section__wrapper {
+  text-align: center;
+  margin-bottom: 8rem;
+  .bonus__section-titel {
+    font-weight: 700;
+    font-size: 2.2rem;
+    margin-bottom: 5rem;
+    color: $main;
+  }
+
+  .bonus__item-line {
+    display: flex;
+    justify-content: space-between;
+    .item__name {
+      font-weight: 300;
+      margin-top: 0.7rem;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -80,10 +156,43 @@ $rare: #da57f8;
       display: none;
     }
   }
+  .bonus__item-line {
+    .item-7,
+    .item-6,
+    .item-5 {
+      display: none;
+    }
+  }
 }
 
 @media (max-width: 768px) {
   .header_nav {
     display: none;
+  }
+
+  .bonus__item-line {
+    .item-7,
+    .item-6,
+    .item-5,
+    .item-4 {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .bonus__section-titel {
+    font-size: 1.5rem !important;
+  }
+  #bonus__item-line {
+    display: flex;
+    justify-content: space-around;
+    .item-7,
+    .item-6,
+    .item-5,
+    .item-4,
+    .item-3 {
+      display: none;
+    }
   }
 }
