--- a/main.css
+++ b/main.css
@@ -8,10 +8,51 @@ body {
   font-family: "Ubuntu", sans-serif;
 }
 
+.color__main {
+  background-color: #010f56;
+}
+
+.color__pink {
+  background-color: #ff027e;
+}
+
+.color__yellow {
+  background-color: #fccc43;
+}
+
+.color__darker {
+  background-color: #07003b;
+}
+
+.color__success {
+  background-color: #1cb60e;
+}
+
+.color__primary {
+  background-color: #2f80ed;
+}
+
+.color__danger {
+  background-color: #d51313;
+}
+
+.color__orange {
+  background-color: #f95f09;
+}
+
+.color__shopping {
+  background-color: #ffc1b3;
+}
+
+.color__rare {
+  background-color: #da57f8;
+}
+
 .web__header {
   background-color: #010f56;
   padding: 1rem 0rem;
   color: #ffffff;
+  margin-bottom: 3rem;
 }
 .web__header .header_wrapper {
   display: flex;
@@ -51,13 +92,59 @@ body {
   height: 1.5rem;
 }
 
+.bonus__section__wrapper {
+  text-align: center;
+  margin-bottom: 8rem;
+}
+.bonus__section__wrapper .bonus__section-titel {
+  font-weight: 700;
+  font-size: 2.2rem;
+  margin-bottom: 5rem;
+  color: #010f56;
+}
+.bonus__section__wrapper .bonus__item-line {
+  display: flex;
+  justify-content: space-between;
+}
+.bonus__section__wrapper .bonus__item-line .item__name {
+  font-weight: 300;
+  margin-top: 0.7rem;
+}
+
 @media (max-width: 992px) {
   .header_nav .business_contnact {
+    display: none;
+  }
+  .bonus__item-line .item-7,
+.bonus__item-line .item-6,
+.bonus__item-line .item-5 {
     display: none;
   }
 }
 @media (max-width: 768px) {
   .header_nav {
+    display: none;
+  }
+  .bonus__item-line .item-7,
+.bonus__item-line .item-6,
+.bonus__item-line .item-5,
+.bonus__item-line .item-4 {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  .bonus__section-titel {
+    font-size: 1.5rem !important;
+  }
+  #bonus__item-line {
+    display: flex;
+    justify-content: space-around;
+  }
+  #bonus__item-line .item-7,
+#bonus__item-line .item-6,
+#bonus__item-line .item-5,
+#bonus__item-line .item-4,
+#bonus__item-line .item-3 {
     display: none;
   }
 }/*# sourceMappingURL=main.css.map */
